Gemaakt met Colab

--- a/2-analysis-1-var/lab-2.01-metro.ipynb
+++ b/2-analysis-1-var/lab-2.01-metro.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "MvwMKfrI8X-p"
       },
@@ -51,13 +51,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "leGjVujR5miN"
+        "id": "leGjVujR5miN",
+        "outputId": "913de98b-af3b-475f-ec50-6a3266d55c39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean: 54.45\n",
+            "Inter Quartile Range: 54.5\n"
+          ]
+        }
+      ],
       "source": [
-        "a = np.array([87, 42, 0, 62, 124, 0, 58, 37, 74, 94, 182, 23, 17, 62, 29, 17, 82, 54, 0, 45])\n"
+        "a = np.array([87, 42, 0, 62, 124, 0, 58, 37, 74, 94, 182, 23, 17, 62, 29, 17, 82, 54, 0, 45])\n",
+        "print(\"Mean:\", np.mean(a))\n",
+        "print(\"Inter Quartile Range:\", np.quantile(a, 0.75) - np.quantile(a, 0.25))"
       ]
     }
   ],
