Gemaakt met Colab

--- a/2-analysis-1-var/lab-2.02-coffee-shop.ipynb
+++ b/2-analysis-1-var/lab-2.02-coffee-shop.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "MvwMKfrI8X-p"
       },
@@ -49,18 +49,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BntQ7l2L83tu",
-        "outputId": "6fd7374e-5c0b-482f-9baa-5d704eb8a44c"
+        "outputId": "16a7b79e-ea38-4ad5-ac63-d19faa4a2d7f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Median: 19.5\n",
+            "Range: 35\n",
+            "Q1: 14.0\n",
+            "Q2: 19.5\n",
+            "Q3: 31.75\n",
+            "IQR (= Q3 - Q1): 17.75\n"
+          ]
+        }
+      ],
       "source": [
-        "times = np.array([17, 15, 9, 31, 33, 41, 8, 14, 13, 22, 27, 43, 32, 14])\n"
+        "times = np.array([17, 15, 9, 31, 33, 41, 8, 14, 13, 22, 27, 43, 32, 14])\n",
+        "print(f'Median: {np.median(times)}')\n",
+        "print(f'Range: {np.max(times) - np.min(times)}')\n",
+        "print(f'Q1: {np.quantile(times, 0.25)}')\n",
+        "print(f'Q2: {np.quantile(times, 0.5)}')\n",
+        "print(f'Q3: {np.quantile(times, 0.75)}')\n",
+        "print(f'IQR (= Q3 - Q1): {np.quantile(times, 0.75) - np.quantile(times, 0.25)}')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2T8ITTHylZDI"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
