--- a/2-analysis-1-var/lab-2.04-wingspan.ipynb
+++ b/2-analysis-1-var/lab-2.04-wingspan.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "MvwMKfrI8X-p"
       },
@@ -51,211 +51,64 @@
         "- Visualise the data using a suitable chart type\n",
         "- Calculate the number of birds using the dataframe\n",
         "- Calculate the mean of the wingspan using the dataframe\n",
-        "- Calculate the standard deviation of the wingspan using the formula for standard deviation using the dataframe \n",
+        "- Calculate the standard deviation of the wingspan using the formula for standard deviation using the dataframe\n",
         "\n",
         "$$ s = \\sqrt{\\sum_{i=1}^{n} {({x_i - \\overline{x}})^2} \\over n - 1} $$"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 363
+          "base_uri": "https://localhost:8080/"
         },
         "id": "HbwXAJ0a-S0q",
-        "outputId": "4f1816fc-7478-46bb-be0e-a9026508de66"
+        "outputId": "50ee8152-de7d-47cb-a3e3-54b4a03ae06e"
       },
       "outputs": [
         {
-          "data": {
-            "text/html": [
-              "\n",
-              "  <div id=\"df-b7388eaf-d2f6-4cb5-89eb-356a07b741c0\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>wingspan</th>\n",
-              "      <th>frequency</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>70</td>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>71</td>\n",
-              "      <td>19</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>72</td>\n",
-              "      <td>53</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>73</td>\n",
-              "      <td>77</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>74</td>\n",
-              "      <td>23</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>75</td>\n",
-              "      <td>75</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>76</td>\n",
-              "      <td>53</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>77</td>\n",
-              "      <td>30</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>78</td>\n",
-              "      <td>12</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>79</td>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b7388eaf-d2f6-4cb5-89eb-356a07b741c0')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-b7388eaf-d2f6-4cb5-89eb-356a07b741c0 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b7388eaf-d2f6-4cb5-89eb-356a07b741c0');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ],
-            "text/plain": [
-              "   wingspan  frequency\n",
-              "0        70          4\n",
-              "1        71         19\n",
-              "2        72         53\n",
-              "3        73         77\n",
-              "4        74         23\n",
-              "5        75         75\n",
-              "6        76         53\n",
-              "7        77         30\n",
-              "8        78         12\n",
-              "9        79          6"
-            ]
-          },
-          "execution_count": 36,
-          "metadata": {},
-          "output_type": "execute_result"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of birds: 352\n",
+            "Wingspan mean: 74.26420454545455\n",
+            "Wingspan standard deviation: 1.9960280910794168\n"
+          ]
         }
       ],
       "source": [
         "birds = pd.DataFrame.from_dict({\n",
-        "    'wingspan':  [70, 71, 72, 73, 74, 75, 76, 77, 78, 79], \n",
+        "    'wingspan':  [70, 71, 72, 73, 74, 75, 76, 77, 78, 79],\n",
         "    'frequency': [ 4, 19, 53, 77, 23, 75, 53, 30, 12,  6]})\n",
-        "birds"
+        "\n",
+        "# 1. Number of birds\n",
+        "nrOfBirds = birds['frequency'].sum()\n",
+        "print(f'Number of birds: {nrOfBirds}')\n",
+        "\n",
+        "# 2. Mean\n",
+        "totaal = 0\n",
+        "mean = 0\n",
+        "for wingspan, frequency in zip(birds['wingspan'], birds['frequency']):\n",
+        "  totaal += wingspan * frequency\n",
+        "mean = totaal/nrOfBirds\n",
+        "print(f'Wingspan mean: {mean}')\n",
+        "\n",
+        "# 3. Standard deviation (in geval van frequentietabel)\n",
+        "variantie = 0\n",
+        "for wingspan, frequency in zip(birds['wingspan'], birds['frequency']):\n",
+        "  variantie += frequency * (wingspan - mean) ** 2\n",
+        "variantie /= (nrOfBirds - 1)\n",
+        "\n",
+        "stdafwijking = np.sqrt(variantie)\n",
+        "print(f'Wingspan standard deviation: {stdafwijking}')"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "UTU6W7gqopPJ"
+      },
       "source": [
         "## Some answers\n",
         "\n",
